# rules_gcs

./: .bazelrc  .bazelrc.ci  BUILD.bazel  MODULE.bazel  README.md
.bcr/: metadata.template.json
.github/workflows/: ci.yml
docs/: BUILD.bazel
examples/: BUILD.bazel
examples/bazel_5/: .bazelrc  WORKSPACE
examples/full/: BUILD.bazel  MODULE.bazel  gcs_lock.json
examples/full/tool_test/: BUILD.bazel
examples/full/tools/: credential-helper
examples/tweag-credential-helper/: .bazelrc  BUILD.bazel  MODULE.bazel  WORKSPACE.bazel  check_file_hash.sh  gcs_lock.json
examples/tweag-credential-helper/tools/: credential-helper
gcs/: BUILD.bazel  extensions.bzl  repo_rules.bzl
gcs/private/: BUILD.bazel  jsonpath.bzl  providers.bzl  url_encoding.bzl  util.bzl
gcs/private/extensions/: BUILD.bazel  gcs_bucket.bzl
gcs/private/repo_rules/: BUILD.bazel  eager.bzl  gcs_archive.bzl  gcs_file.bzl  hub_repo.bzl
gcs/private/rules/: BUILD.bazel  augmented_blob.bzl  copy.bzl  symlink.bzl
tests/unit/jsonpath/: BUILD.bazel  test_jsonpath.bzl
tests/unit/url_encoding/: BUILD.bazel  test_url_encoding.bzl
tools/: credential-helper
