module(
    name = "rules_gcs",
    version = "0.0.1",
    compatibility_level = 0,
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
    dev_dependency = True,
)
bazel_dep(
    name = "stardoc",
    version = "0.7.0",
    dev_dependency = True,
)
bazel_dep(
    name = "rules_bazel_integration_test",
    version = "0.25.0",
    dev_dependency = True,
)

bazel_binaries = use_extension(
    "@rules_bazel_integration_test//:extensions.bzl",
    "bazel_binaries",
    dev_dependency = True,
)
bazel_binaries.download(version = "7.1.0")
bazel_binaries.download(version = "7.3.1")
bazel_binaries.download(version = "latest")
bazel_binaries.download(version = "last_green")
use_repo(bazel_binaries, "bazel_binaries", "bazel_binaries_bazelisk", "build_bazel_bazel_7_1_0", "build_bazel_bazel_7_3_1", "build_bazel_bazel_last_green", "build_bazel_bazel_latest")
