load("@stardoc//stardoc:stardoc.bzl", "stardoc")

stardoc(
    name = "repo_rules",
    out = "repo_rules.md",
    input = "//gcs:repo_rules.bzl",
    deps = ["//gcs/private/repo_rules"],
)

stardoc(
    name = "extensions",
    out = "extensions.md",
    input = "//gcs:extensions.bzl",
    deps = ["//gcs/private/extensions"],
)
