load("@bazel_binaries//:defs.bzl", "bazel_binaries")
load(
    "@rules_bazel_integration_test//bazel_integration_test:defs.bzl",
    "bazel_integration_test",
    "bazel_integration_tests",
    "default_test_runner",
    "integration_test_utils",
)

default_test_runner(
    name = "default_test_runner",
)

default_test_runner(
    name = "authenticated_test_runner",
    bazel_cmds = [
        "info",
        "run @tweag-credential-helper//installer",
        "test //...",
    ],
)

bazel_integration_tests(
    name = "full_test",
    bazel_versions = bazel_binaries.versions.all,
    test_runner = ":default_test_runner",
    workspace_files = integration_test_utils.glob_workspace_files("full") + [
        "//:local_repository_files",
    ],
    workspace_path = "full",
)

bazel_integration_tests(
    name = "tweag_credential_helper",
    additional_env_inherit = ["GOOGLE_APPLICATION_CREDENTIALS"],
    bazel_versions = bazel_binaries.versions.all,
    env = {"CREDENTIAL_HELPER_LOGGING": "debug"},
    test_runner = ":authenticated_test_runner",
    workspace_files = integration_test_utils.glob_workspace_files("tweag-credential-helper") + [
        "//:local_repository_files",
    ],
    workspace_path = "tweag-credential-helper",
)

test_suite(
    name = "integration_tests",
    tags = integration_test_utils.DEFAULT_INTEGRATION_TEST_TAGS,
    tests = integration_test_utils.bazel_integration_test_names(
        "full_test",
        bazel_binaries.versions.all,
    ) + integration_test_utils.bazel_integration_test_names(
        "tweag_credential_helper",
        bazel_binaries.versions.all,
    ),
    visibility = ["//:__subpackages__"],
)
