exports_files(["check_file_hash.sh"])

sh_test(
    name = "check_hello_world",
    srcs = ["check_file_hash.sh"],
    args = [
        "$(location @hello_world//:hello_world)",
        "fcb96ae418b863eb93883a94cc39f81545cfdf97e20d292ed1bd8f78a153cedc",
    ],
    data = ["@hello_world//:hello_world"],
)

