module(
    name = "tweag_credential_helper_example",
    version = "0.0.0",
)

bazel_dep(
    name = "rules_gcs",
    version = "0.0.0",
)
local_path_override(
    module_name = "rules_gcs",
    path = "../..",
)

bazel_dep(
    name = "tweag-credential-helper",
    version = "0.0.1",
)

# This adds a dependency on a private GCS bucket
# You need to run the following command once as a setup:
#
#     bazel run @tweag-credential-helper//installer
#
gcs_bucket = use_extension("@rules_gcs//gcs:extensions.bzl", "gcs_bucket")
gcs_bucket.from_file(
    name = "hello_world",
    bucket = "rules_gcs",
    lockfile = "//:gcs_lock.json",
)

use_repo(gcs_bucket, "hello_world")
